--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- home section end -->
 
     <!-- Case start -->
-        <section class="case container">
+        <section class="case container" id="case">
             <div class="block block--center">
                 <span class="block__caption line-left line-right">Total cases</span>
                 <h2 class="block__heading">Covid-19 outbreak</h2>
@@ -312,6 +312,12 @@
             <h1 class="footer__credit">created by <a href="#">AdStar</a> &copy; copyright @ 2021</h1>
         </div>
     <!-- Footer -->
+
+    <!-- Scroll top -->
+    <a href="#home" class="scroll-top">
+        <img src="./images/scroll-img.png" alt="" class="scroll-top__img">
+    </a>
+    <!-- Scroll top -->
 
 
     <!-- jquery cdn link -->
